# crap-lang

./: .gitignore  CMakeLists.txt  Makefile
include/ast/: ast.hpp
include/generator/: generator.hpp
include/lang/: lang.hpp
include/lexer/: lexer.hpp
include/parser/: parser.hpp
include/token/: token.hpp
include/types/: token_type.hpp  types.hpp
lang/: CMakeLists.txt  main.cpp  main.ll
lib/: CMakeLists.txt
lib/include/ast/: ast.hpp
lib/include/lang/: lang.hpp
lib/include/parser/: parser.hpp
lib/include/token/: token.hpp
lib/include/types/: types.hpp
lib/src/: lang.cpp  parser.cpp
src/: generator.cpp  lang.cpp  lexer.cpp  parser.cpp
